tests/snapshots/errors/asm_ret_forbidden.mc
// Test Ret instruction is forbidden
asm {
    __emit("Ret");
};
